# ossm-rust

./: .gitignore  Cargo.toml  README.md  README.zh.md  sdkconfig.defaults
.cargo/: config.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css  types.ts
frontend/src/components/: MainControl.vue  SplineEditor.vue
src/: command.rs  context.rs  http_api.rs  main.rs  motion.rs  motor.rs  motor_57aim30.rs  storage.rs
